--- a/tasks-3/rest-example-2/views/users.pug
+++ b/tasks-3/rest-example-2/views/users.pug
@@ -21,7 +21,7 @@ block content
         td 
 
           form(action="/users?_method=DELETE" method="post")
-            button(type="submit") Delete resourse
+            button(type="submit" name=item.id) Delete resourse
 
             //- input(type="submit" value="Delete" name=item.id)
         td 
