--- a/tasks-3/rest-example-2/views/users.pug
+++ b/tasks-3/rest-example-2/views/users.pug
@@ -1,49 +1,66 @@
 extends layout
 
 block content
- 
-  table
-    caption List of Users
-    tr
-      th Name
-      th Surname
-      th Email
-      th Age
-      th Delete
-      th Edit
-    each item in users
-      tr(user-id=item.id)
-        td= item.name
-        td= item.surname
-        td= item.email
-        td= item.age
-        td 
-          button(type="button" user-id=item.id onclick="deleteUser()") Delete user
-        td 
-          button(type="button" user-id=item.id onclick="editUser()") Edit user
+  div.container
 
-  div
-    h4 Add new user
-    span Name:
-    input(type="text" name="name" id="new-user-name")
-    span Surname:
-    input(type="text" name="surname" id="new-user-surname")
-    span Email:
-    input(type="text" name="email" id="new-user-email")
-    span Age:
-    input(type="text" name="age" id="new-user-age")
-    input(type="submit" value="Add" onclick="addUser()")
+            
+    table(class="striped bordered centered")
+      caption List of Users
+      thead
+        tr
+          th Name
+          th Surname
+          th Email
+          th Age
+          th Delete
+          th Edit
+      tbody
+        each item in users
+          tr(user-id=item.id)
+            td= item.name
+            td= item.surname
+            td= item.email
+            td= item.age
+            td 
+              button(class="btn-floating btn-medium red" type="button" )
+                i(class="large material-icons"  user-id=item.id onclick="deleteUser()") delete
+            td 
+              button(data-target="modal1" class="btn-floating modal-trigger btn-medium" type="button" )
+                i(class="large material-icons" user-id=item.id  onclick="editUser()") mode_edit
 
 
+    div(id="modal1" class="modal")
+      div(class="modal-content")
 
-  div
-    h4 Edit user, enter new props
-    span Name:
-    input(type="text" name="name" id="edit-user-name")
-    span Surname:
-    input(type="text" name="surname" id="edit-user-surname")
-    span Email:
-    input(type="text" name="email" id="edit-user-email")
-    span Age:
-    input(type="text" name="age" id="edit-user-age")
-    input(type="submit" value="Edit" id="edit-send-button" onclick="sendEditedUser()")
+        div
+          h4 Edit user, enter new props
+          span Name:
+          input(type="text" name="name" id="edit-user-name")
+          span Surname:
+          input(type="text" name="surname" id="edit-user-surname")
+          span Email:
+          input(type="text" name="email" id="edit-user-email")
+          span Age:
+          input(type="text" name="age" id="edit-user-age")
+          button(class="btn waves-effect waves-light" type="submit" name="action" id="edit-send-button" onclick="sendEditedUser()") Edit user
+            i(class="material-icons right") send
+
+    div(class="row")
+      form(class="col s12")
+        div(class="row")
+          h5 Add new user
+          div(class="input-field col s6")
+            input(type="text" class="validate" id="new-user-name")
+            label(for="new-user-name") Name
+          div(class="input-field col s6")
+            input(type="text" id="new-user-surname" class="validate")
+            label(for="new-user-surname") Surname
+        div(class="row")
+          div(class="input-field col s6")
+            input(type="text" class="validate" id="new-user-email")
+            label(for="new-user-email") Email
+          div(class="input-field col s6")
+            input(type="text" class="validate" id="new-user-age")
+            label(for="new-user-age") Age
+          button(type="submit" name="action" class="btn waves-effect waves-light" onclick="addUser()") Add user
+            i(class="material-icons right") add
