--- a/tasks-3/rest-1-get-post/views/layout.pug
+++ b/tasks-3/rest-1-get-post/views/layout.pug
@@ -7,3 +7,5 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     block content
+
+    script(src='/javascripts/script.js')
