--- a/tasks-3/rest-3-ajax/views/layout.pug
+++ b/tasks-3/rest-3-ajax/views/layout.pug
@@ -11,5 +11,10 @@ html
   body
     block content
     script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
+
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js')
+
+    script(src="/javascripts/users-client.js")
+
     script(src='/javascripts/script.js')
+
